--- a/文档/命令行执行.md
+++ b/文档/命令行执行.md
@@ -34,7 +34,8 @@ output:
   filename: '[name].js'
   path: path.resolve __dirname,'exroot/dist'
   publicPath: '.'
-// 因为命令执行需要target=node
+// 因为命令执行, webpack配置文件需要设置
+target=node
 
 // 然后命令行执行
 yarn
