--- a/文档/生产和开发配置不同.md
+++ b/文档/生产和开发配置不同.md
@@ -11,8 +11,8 @@
 
 	- https://webpack.docschina.org/guides/production/
 	- 不同的环境用mode: development, mode: production区分
-	- 第一种写法: 不同的环境使用不同的配置文件
-	- 公用的放到common里面
+
+1. 第一种写法: 不同的环境使用不同的配置文件, 公用的放到common里面
 
 ```sh
 npm install --save-dev webpack-merge #这个可以包含common配置
@@ -71,69 +71,6 @@ module.exports = merge(common, {
 }
 ```
 
-
-
-```js
-const HtmlWebpackPlugin=require('html-webpack-plugin');
-//html的处理,1/2 官方推荐使用插件, 这个用在webpack.config.js, 可以用模板
-const webpackdevconfig={ 
-	module: {
-		rules: [
-			{
-				test: /\.(png|svg|jpg|gif)$/,
-				use: [
-					//html的处理方法, 2/2,或者可以用file-loader也可以copy过去.
-					'file-loader',
-				],
-			},
-		]
-	},
-	plugins: [
-		new CleanWebpackPlugin(),
-		//CleanWebpackPlugin, 因为他的存在, 所以git控制的目录要在上一层.
-		new HtmlWebpackPlugin({
-			title: '管理缓存',
-		}),
-	],
-	output: {
-		filename: '[name].[contenthash].js',
-		//使用filename: '[name].[contenthash].js', 保证有更新就刷缓存. 
-		path: path.resolve(__dirname,'output/online'),
-		//这里output中的文件不会被自动清除, 所以可以设置为git控制的目录.
-		publicPath: '/',
-	},
-	//不同环境配置是生产和开发环境差异的一个解决方案
-	externals: { //直接配置
-    //Config这个key就是未来js要用的. 
-		'Config': JSON.stringify(process.env.NODE_ENV==='production'? {
-			serverUrl: "https://myserver.com"
-		}:{
-				serverUrl: "http://localhost:8090"
-			})
-	},
-	externals2: { //配置文件配置
-		'Config': JSON.stringify(process.env.NODE_ENV==='production'? require('./config.prod.json'):require('./config.dev.json'))
-	},
-
-};
-
-```
-
-
-- 自己的js文件中
-
-
-```js
-var Config = require('Config')
-fetchData(Config.serverUrl + '/Enterprises/...')
-
-//react
-import Config from 'Config';
-axios.get(this.app_url, {
-  'headers': Config.headers
-}).then(...);
-```
-
 - 第二种方法,webpack.config.js 配置文件用函数写法
 
 ```js
@@ -153,4 +90,36 @@ module.exports = function(env, argv) {
 
 ```
 
-- 第三种方法, 用defineplugin, 直接可以定义编译期的全局变量. js中可以直接使用.
+###### 配置不同的环境参数
+
+1. externals
+
+   ```coffeescript
+   # 配置文件
+   #不同环境配置是生产和开发环境差异的一个解决方案
+   	externals: { #直接配置
+       #Config这个key就是未来js要用的. 
+   		'Config': JSON.stringify(process.env.NODE_ENV==='production'? {
+   			serverUrl: "https://myserver.com"
+   		}:{
+   				serverUrl: "http://localhost:8090"
+   			})
+   	},
+   	externals2: { #配置文件配置
+   		'Config': JSON.stringify(process.env.NODE_ENV==='production'? require('./config.prod.json'):require('./config.dev.json'))
+   	},
+   
+   # coffee文件
+   var Config = require('Config')
+   fetchData(Config.serverUrl + '/Enterprises/...')
+   
+   #react
+   import Config from 'Config';
+   axios.get(this.app_url, {
+     'headers': Config.headers
+   }).then(...);
+   ```
+
+   
+
+2. 用defineplugin, 直接可以定义编译期的全局变量. js中可以直接使用.
