--- a/文档/脚手架.md
+++ b/文档/脚手架.md
@@ -4,6 +4,7 @@
   - dev和prod分开
   - html和cmd分开
   - 多html, 多js支持
+  - externals排除node_modules
 - 定制化内容
   - react支持
   - c24n/i18n支持
@@ -11,4 +12,5 @@
   - eletron需求
   - chrome extension需求
   - 微信小程序需求
-  - 配置生产环境参数, 多种方式
+  - 配置生产/开发环境参数, 多种方式
+  - externals排除的目录
