--- a/文档/脚手架.md
+++ b/文档/脚手架.md
@@ -14,3 +14,11 @@
   - 微信小程序需求
   - 配置生产/开发环境参数, 多种方式
   - externals排除的目录
+
+
+
+###### 参考文档
+
+- https://webpack.docschina.org/guides/scaffolding/
+- https://webpack.docschina.org/contribute/writing-a-scaffold/
+- 失效内容: https://github.com/evenstensberg/webpack-scaffold-demo
