--- a/文档/脚手架.md
+++ b/文档/脚手架.md
@@ -1,4 +1,4 @@
-确实需要脚手架项目:
+###### 确实需要脚手架项目:
 
 - 基础内容
   - dev和prod分开
@@ -15,10 +15,13 @@
   - 配置生产/开发环境参数, 多种方式
   - externals排除的目录
 
+###### 脚手架的基础框架
 
+- yeoman
 
 ###### 参考文档
 
 - https://webpack.docschina.org/guides/scaffolding/
 - https://webpack.docschina.org/contribute/writing-a-scaffold/
 - 失效内容: https://github.com/evenstensberg/webpack-scaffold-demo
+- https://yeoman.io/
