--- a/文档/脚手架.md
+++ b/文档/脚手架.md
@@ -15,9 +15,81 @@
   - 配置生产/开发环境参数, 多种方式
   - externals排除的目录
 
-###### 脚手架的基础框架
+###### 自力更生
 
-- yeoman
+- yeoman使用传统的oo思想, 弄了一堆生命周期, 整体非常的脱裤子放屁. 
+- 用coffee直接写一个也没什么大问题. 
+- coffeepack, 不使用问答式, 而是用配置式搞定这个. coffeepackconfig.cs
+- 作为coffee语言的特性
+
+###### 脚手架的基础框架: yeoman
+
+1. 安装yo
+
+   ```sh
+   npm install -g yo
+   ```
+
+2. 新建并使用目录
+
+   ```
+   # 根目录: generator-name, 注意目录名必须用generator-开头
+   - generator-name
+   	- app #目录
+   		- index.js
+   
+   # 会在./和generators/ 寻找, 因此上面这个可以改为
+   - generator-name
+   	- generators
+       - app #目录
+         - index.js
+   # .yo-rc.json 文件是目标项目文件的根
+   ```
+
+   
+
+3. package.json
+
+   ```json
+   "dependencies": { //依赖
+     "del": "^2.2.0",
+     "yeoman-generator": "^0.23.3"
+   },
+   "files": [ //需要使用的目录
+     "generators/app",
+     "generators/router"
+   ],
+   "keywords": ["yeoman-generator"], //必须只要有这个key
+   "name": "generator-name", //必须generator开头
+   ```
+
+4. index.js的框架代码
+
+```js
+// 导出模块，使得yo xxx能够运行
+module.exports = yeoman.generators.Base.extend({
+  constructor: function () {
+    // 默认会添加的构造函数
+    yeoman.generators.Base.apply(this, arguments);
+  },
+  prompting: function () {
+    // 询问用户
+  },
+  writing: {
+    // 拷贝文件，搭建脚手架
+  },
+  end: {
+    // 搭建完执行的操作
+  }
+})
+```
+
+4. 执行
+
+   ```sh
+   npm link # 把自己刚刚弄的脚手架做好软链接
+   yo #这样就进入对话模式, 然后选择自己要用的脚手架, 基本都是link过的.
+   ```
 
 ###### 参考文档
 
@@ -25,3 +97,7 @@
 - https://webpack.docschina.org/contribute/writing-a-scaffold/
 - 失效内容: https://github.com/evenstensberg/webpack-scaffold-demo
 - https://yeoman.io/
+- yeoman, 这篇文档流程比较完整: https://www.jianshu.com/p/f6b8ace5c287
+- yeoman中文: 
+  - https://yowebapp.github.io/learning/
+  - https://yowebapp.github.io/authoring/
